refactor: unify move interfaces